setup work page

--- a/index.html
+++ b/index.html
@@ -61,35 +61,56 @@
       <main>
         <section class="portfolio_slider">
           <ul class="portfolio_slider_images">
-            <li style="background-image: url(images/portfolio/wake-up.jpg);">
-              <h1 class="slide-in" data-splitting>Wakey wake</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/blue-bag.jpg);">
-              <h1 class="slide-in" data-splitting>Saints Bag</h1>
-            </li>
-            <li style="background-image: url(images/portfolio/face-side.jpg);">
-              <h1 class="slide-in" data-splitting>67 Jewelry</h1>
+            <li
+              style="
+                background-image: url(images/portfolio/lambda_resturaunt.jpg);
+              "
+            >
+              <h1 class="slide-in" data-splitting>Lambda</h1>
             </li>
             <li
-              style="background-image: url(images/portfolio/yellow-book.jpg);"
+              style="
+                background-image: url(images/portfolio/startup-agency.jpg);
+              "
             >
-              <h1 class="slide-in" data-splitting>Nasty Paper</h1>
+              <h1 class="slide-in" data-splitting>Startup Agency</h1>
             </li>
-            <li style="background-image: url(images/portfolio/vui.jpg);">
-              <h1 class="slide-in" data-splitting>Pluch</h1>
+            <li style="background-image: url(images/portfolio/greeny.jpg);">
+              <h1 class="slide-in" data-splitting>Greeny</h1>
             </li>
-
-            <li style="background-image: url(images/portfolio/logo-a.jpg);">
-              <h1 class="slide-in" data-splitting>Vpside down</h1>
+            <li style="background-image: url(images/portfolio/modernblog.jpg);">
+              <h1 class="slide-in" data-splitting>Mordern Blog</h1>
+            </li>
+            <li
+              style="background-image: url(images/portfolio/file_uploader.jpg);"
+            >
+              <h1 class="slide-in" data-splitting>Uploader</h1>
+            </li>
+            <li style="background-image: url(images/portfolio/riazv2.jpg);">
+              <h1 class="slide-in" data-splitting>MY Portfolio V2</h1>
+            </li>
+            <li style="background-image: url(images/portfolio/riazv1.jpg);">
+              <h1 class="slide-in" data-splitting>MY Portfolio V1</h1>
+            </li>
+            <li
+              style="background-image: url(images/portfolio/Boo_Creative.jpeg);"
+            >
+              <h1 class="slide-in" data-splitting>Boo - Creative</h1>
+            </li>
+            <li style="background-image: url(images/portfolio/mitalent.jpg);">
+              <h1 class="slide-in" data-splitting>MI Talent</h1>
             </li>
           </ul>
           <ul class="portfolio_slider_navigation">
-            <li><a href="pages/work-single.html">Wakey wake</a></li>
-            <li><a href="pages/work-single.html">Saints Bag</a></li>
-            <li><a href="pages/work-single.html">67 Jewelry</a></li>
-            <li><a href="pages/work-single.html">Nasty Paper</a></li>
-            <li><a href="pages/work-single.html">Pluch</a></li>
-            <li><a href="pages/work-single.html">Vpside down</a></li>
+            <li><a href="pages/works/lambda.html">Lambda</a></li>
+            <li><a href="pages/work-single.html">Startup Agency</a></li>
+            <li><a href="pages/work-single.html">Greeny</a></li>
+            <li><a href="pages/work-single.html">Mordern Blog</a></li>
+            <li><a href="pages/work-single.html">Uploader</a></li>
+            <li><a href="pages/work-single.html">Portfolio V2</a></li>
+            <li><a href="pages/work-single.html">Portfolio V1</a></li>
+            <li><a href="pages/work-single.html">Boo</a></li>
+            <li><a href="pages/work-single.html">MI Talent</a></li>
           </ul>
         </section>
       </main>
