navigation mistake fix

--- a/pages/about.html
+++ b/pages/about.html
@@ -173,8 +173,8 @@
             <div class="title">
               <h4>Latest project</h4>
             </div>
-            <a href="../pages/work-single.html" class="smooth">
-              <img alt="project" src="../images/portfolio/yellow-book.jpg" />
+            <a href="../pages/works/startup_agency.html" class="smooth">
+              <img alt="project" src="../images/portfolio/startup-agency.jpg" />
             </a>
           </div>
         </section>
