--- a/pages/blog.html
+++ b/pages/blog.html
@@ -41,8 +41,8 @@
         .setAttribute("content", document.location);
     </script>
     <!-- Splitting CSS -->
-    <link rel="stylesheet" href="css/splitting.css" />
-    <link rel="stylesheet" href="css/splitting-cells.css" />
+    <!-- <link rel="stylesheet" href="../css/splitting.css" />
+    <link rel="stylesheet" href="../css/splitting-cells.css" /> -->
     <!-- Main CSS -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
