--- a/pages/works/work-single.html
+++ b/pages/works/work-single.html
@@ -54,12 +54,12 @@
           <img src="../../images/logo.png" alt="brand"
         /></a>
         <nav class="main-nav">
-          <li><a href="/" title="Work">Work</a></li>
+          <li><a href="/" title="Work" class="active">Work</a></li>
           <li>
             <a href="../../pages/about.html" title="About">about</a>
           </li>
           <li>
-            <a href="../../pages/blog.html" title="Blog" class="active">blog</a>
+            <a href="../../pages/blog.html" title="Blog">blog</a>
           </li>
           <li>
             <a href="../../pages/contact.html" title="Contact">contact</a>
