added all work pages

--- a/index.html
+++ b/index.html
@@ -103,14 +103,16 @@
           </ul>
           <ul class="portfolio_slider_navigation">
             <li><a href="pages/works/lambda.html">Lambda</a></li>
-            <li><a href="pages/work-single.html">Startup Agency</a></li>
-            <li><a href="pages/work-single.html">Greeny</a></li>
-            <li><a href="pages/work-single.html">Mordern Blog</a></li>
-            <li><a href="pages/work-single.html">Uploader</a></li>
-            <li><a href="pages/work-single.html">Portfolio V2</a></li>
-            <li><a href="pages/work-single.html">Portfolio V1</a></li>
-            <li><a href="pages/work-single.html">Boo</a></li>
-            <li><a href="pages/work-single.html">MI Talent</a></li>
+            <li>
+              <a href="pages/works/startup_agency.html">Startup Agency</a>
+            </li>
+            <li><a href="pages/works/greeny.html">Greeny</a></li>
+            <li><a href="pages/works/modernblog.html">Mordern Blog</a></li>
+            <li><a href="pages/works/uploader.html">Uploader</a></li>
+            <li><a href="pages/works/v2.html">Portfolio V2</a></li>
+            <li><a href="pages/works/v1.html">Portfolio V1</a></li>
+            <li><a href="pages/works/boo.html">Boo</a></li>
+            <li><a href="pages/works/mitalent.html">MI Talent</a></li>
           </ul>
         </section>
       </main>
