--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,10 @@
       property="og:description"
       content="This is framwork less animated portfolio site"
     />
-    <meta property="og:image" content="../preview.jpg" />
+    <meta
+      property="og:image"
+      content="https://i.postimg.cc/6pX3KXzn/preview.jpg"
+    />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -30,7 +33,10 @@
       property="twitter:description"
       content="This is framwork less animated portfolio site"
     />
-    <meta property="twitter:image" content="../preview.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://i.postimg.cc/6pX3KXzn/preview.jpg"
+    />
     <!-- Dynamic meta url set -->
     <script>
       document
