--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.postimg.cc/6pX3KXzn/preview.jpg"
+      content="https://i.postimg.cc/25ggpz7f/preview.jpg"
     />
 
     <!-- Twitter -->
@@ -35,7 +35,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://i.postimg.cc/6pX3KXzn/preview.jpg"
+      content="https://i.postimg.cc/25ggpz7f/preview.jpg"
     />
     <!-- Dynamic meta url set -->
     <script>
