--- a/pages/contact.html
+++ b/pages/contact.html
@@ -79,13 +79,8 @@
             <div class="intro">
               <span class="typed">Write me, Please</span>
             </div>
-            <form
-              id="form"
-              action="../php/mail.php"
-              class="contact-form"
-              method="POST"
-              netlify
-            >
+            <!-- action="../php/mail.php" -->
+            <form id="form" class="contact-form" method="POST" netlify>
               <label>What's your name? *</label>
               <input required="" type="text" name="name" />
               <label>E-mail address *</label>
