font changed from css to html and image optimized

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -46,6 +46,16 @@
         .querySelector("meta[property='twitter:url']")
         .setAttribute("content", document.location);
     </script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,500"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,600"
+      rel="stylesheet"
+      type="text/css"
+    />
     <!-- Splitting CSS -->
     <!-- <link rel="stylesheet" href="../css/splitting.css" />
     <link rel="stylesheet" href="../css/splitting-cells.css" /> -->
