--- a/pages/about.html
+++ b/pages/about.html
@@ -118,7 +118,7 @@
                           <a href="https://web.facebook.com/mdriaz.wd"
                             >Facebook</a
                           >
-                          <a href="https://twitter.com/MDRiaz53949149"
+                          <a href="https://twitter.com/mdriaz_"
                             >Twitter</a
                           >
                         </td>
