--- a/pages/contact.html
+++ b/pages/contact.html
@@ -121,7 +121,7 @@
                   </svg>
                 </span>
               </a>
-              <a href="https://twitter.com/MDRiaz53949149" class="contact-link">
+              <a href="https://twitter.com/mdriaz_" class="contact-link">
                 <span class="contact-icon">
                   <svg
                     class="contact-icon twitter-icon-svg"
