--- a/index.html
+++ b/index.html
@@ -79,9 +79,24 @@
           <ul class="portfolio_slider_images">
             <li
               style="
+                background-image: url(images/portfolio/bookmark-manager.jpg);
+              "
+            >
+              <div class="context">
+                <span>HTMl5</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </div>
+              <h1 class="slide-in" data-splitting>Bookmark Manager</h1>
+            </li>
+            <li
+              style="
                 background-image: url(images/portfolio/lambda_resturaunt.jpg);
               "
             >
+              <div class="context">
+                <span>Bootstrap 5</span>
+              </div>
               <h1 class="slide-in" data-splitting>Lambda</h1>
             </li>
             <li
@@ -89,41 +104,78 @@
                 background-image: url(images/portfolio/startup-agency.jpg);
               "
             >
+              <div class="context">
+                <span>TailwindCSS</span>
+              </div>
               <h1 class="slide-in" data-splitting>Startup Agency</h1>
             </li>
             <li style="background-image: url(images/portfolio/greeny.jpg);">
+              <div class="context">
+                <span>TailwindCSS</span>
+                <span>PHP Contact Form</span>
+                <span>CodeCanyon</span>
+              </div>
               <h1 class="slide-in" data-splitting>Greeny</h1>
             </li>
             <li style="background-image: url(images/portfolio/modernblog.jpg);">
-              <h1 class="slide-in" data-splitting>Mordern Blog</h1>
+              <div class="context">
+                <span>Bootstrap</span>
+                <span>Laravel</span>
+              </div>
+              <h1 class="slide-in" data-splitting>Larablog</h1>
             </li>
             <li
               style="background-image: url(images/portfolio/file_uploader.jpg);"
             >
+              <div class="context">
+                <span>HTML5</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+                <span>PHP</span>
+              </div>
               <h1 class="slide-in" data-splitting>Uploader</h1>
             </li>
             <li style="background-image: url(images/portfolio/riazv2.jpg);">
+              <div class="context">
+                <span>HTML5</span>
+                <span>CSS</span>
+                <span>jQuery</span>
+              </div>
               <h1 class="slide-in" data-splitting>MY Portfolio V2</h1>
             </li>
             <li style="background-image: url(images/portfolio/riazv1.jpg);">
+              <div class="context">
+                <span>HTML5</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </div>
               <h1 class="slide-in" data-splitting>MY Portfolio V1</h1>
             </li>
             <li
               style="background-image: url(images/portfolio/Boo_Creative.jpeg);"
             >
+              <div class="context">
+                <span>Bootstrap</span>
+              </div>
               <h1 class="slide-in" data-splitting>Boo - Creative</h1>
             </li>
             <li style="background-image: url(images/portfolio/mitalent.jpg);">
+              <div class="context">
+                <span>HTML5</span>
+                <span>CSS</span>
+                <span>JavaScript</span>
+              </div>
               <h1 class="slide-in" data-splitting>MI Talent</h1>
             </li>
           </ul>
           <ul class="portfolio_slider_navigation">
+            <li><a href="pages/works/bookmark.html">Bookmark</a></li>
             <li><a href="pages/works/lambda.html">Lambda</a></li>
             <li>
               <a href="pages/works/startup_agency.html">Startup Agency</a>
             </li>
             <li><a href="pages/works/greeny.html">Greeny</a></li>
-            <li><a href="pages/works/modernblog.html">Mordern Blog</a></li>
+            <li><a href="pages/works/modernblog.html">Larablog</a></li>
             <li><a href="pages/works/uploader.html">Uploader</a></li>
             <li><a href="pages/works/v2.html">Portfolio V2</a></li>
             <li><a href="pages/works/v1.html">Portfolio V1</a></li>
