--- a/pages/about.html
+++ b/pages/about.html
@@ -115,12 +115,10 @@
                         <td><strong>Active on</strong></td>
                         <td>
                           <a href="https://github.com/md-riaz">GitHub</a>
-                          <a href="https://web.facebook.com/mdriaz.wd"
+                          <a href="https://www.facebook.com/mdriazwd"
                             >Facebook</a
                           >
-                          <a href="https://twitter.com/mdriaz_"
-                            >Twitter</a
-                          >
+                          <a href="https://twitter.com/mdriaz_wd">Twitter</a>
                         </td>
                       </tr>
                     </table>
