--- a/pages/contact.html
+++ b/pages/contact.html
@@ -121,7 +121,7 @@
                   </svg>
                 </span>
               </a>
-              <a href="https://twitter.com/mdriaz_" class="contact-link">
+              <a href="https://twitter.com/mdriaz_wd" class="contact-link">
                 <span class="contact-icon">
                   <svg
                     class="contact-icon twitter-icon-svg"
@@ -136,7 +136,7 @@
                   </svg>
                 </span>
               </a>
-              <a href="https://web.facebook.com/mdriaz.wd" class="contact-link">
+              <a href="https://www.facebook.com/mdriazwd" class="contact-link">
                 <span class="contact-icon icon-fb">
                   <svg
                     fill="currentColor"
