--- a/pages/works/bookmark.html
+++ b/pages/works/bookmark.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Riaz - File Uploader</title>
+    <title>Riaz - Bookmark landing page</title>
     <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
     <!-- Primary Meta Tags -->
     <meta name="title" content="- Responsive HTML5 Portfolio" />
@@ -85,16 +85,19 @@
       <main id="work-details">
         <section class="container-fluid">
           <div class="content">
-            <h1 class="plop-it" data-splitting>File Uploader</h1>
+            <h1 class="plop-it" data-splitting>Bookmark landing page</h1>
             <p class="plop-it" data-splitting>
-              File Uploader is my hobby project to quickly upload mini files and
-              share their public links on the web. This site is made purely on
-              JavaScript and PHP for backend. The power of asynchronous file
-              uploading is here with support of Drag & Drop.
+              Bookmark landing page is a challange by Frontendmentor.io site
+              which I have completed succesfully.
             </p>
             <div class="links">
-              <a href="http://riazfiles.ml/upload">See Live</a>
-              <a href="https://github.com/md-riaz/upload-link">
+              <a
+                href="https://md-riaz.github.io/bookmark-landing-page-challenge/"
+                >See Live</a
+              >
+              <a
+                href="https://github.com/md-riaz/bookmark-landing-page-challenge"
+              >
                 <svg
                   class="case-item-icon icon-github"
                   fill="currentColor"
@@ -114,7 +117,7 @@
           <img
             class="shadow"
             alt="Project"
-            src="../../images/portfolio/single/file_uploader_1.jpg"
+            src="../../images/portfolio/single/bookmark-landing-page.jpg"
           />
         </section>
       </main>
