--- a/pages/works/greeny.html
+++ b/pages/works/greeny.html
@@ -95,16 +95,22 @@
               professional in every device. It comes with 8 different color
               choices.
             </p>
+            <div class="links">
+              <a href="https://greeny.ga/">See Live</a>
+              <a
+                href="https://codecanyon.net/item/greeny-multipurpose-one-page-portfolio/27090475"
+              >
+                CodeCanyon
+              </a>
+            </div>
           </div>
         </section>
         <section class="content">
-          <a href="https://greeny.ga/">
-            <img
-              class="shadow"
-              alt="Project"
-              src="../../images/portfolio/single/greeny_1.jpg"
-            />
-          </a>
+          <img
+            class="shadow"
+            alt="Project"
+            src="../../images/portfolio/single/greeny_1.jpg"
+          />
           <img
             class="shadow"
             alt="Project"
