--- a/pages/blog.html
+++ b/pages/blog.html
@@ -82,42 +82,51 @@
       <main>
         <section class="container-fluid" id="blogs">
           <div class="content">
-            <a href="#" class="blog-item">
-              <h2>Beautiful gray</h2>
+            <a
+              href="http://larablog.ga/post/bootstrap---with-parcel"
+              class="blog-item"
+            >
+              <h2>BOOTSTRAP 5 WITH PARCEL</h2>
               <img
                 class="shadow"
-                src="../images/portfolio/architecture-1.jpg"
+                src="../images/blogs/1670309970432414.webp"
                 alt="Project Image"
               />
               <div class="info">
-                <div class="author">By Ben Bryden on November 27, 2016</div>
-                <div class="tag">Design, Photography</div>
+                <div class="author">By MD Riaz on June 27, 2020</div>
+                <div class="tag">Bootstrap, Parcel</div>
               </div>
             </a>
 
-            <a href="#" class="blog-item">
-              <h2>The other side of design</h2>
+            <a
+              href="http://larablog.ga/post/super-centered-place-items--center"
+              class="blog-item"
+            >
+              <h2>SUPER CENTERED PLACE-ITEMS: CENTER</h2>
               <img
                 class="shadow"
-                src="../images/portfolio/face-side.jpg"
+                src="../images/blogs/1671758006734711.webp"
                 alt="Project Image"
               />
               <div class="info">
-                <div class="author">By Ben Bryden on November 27, 2016</div>
-                <div class="tag">Design, Photography</div>
+                <div class="author">By MD Riaz on July 09, 2020</div>
+                <div class="tag">CSS, Layouts</div>
               </div>
             </a>
 
-            <a href="#" class="blog-item">
-              <h2>Practice more and be crazy</h2>
+            <a
+              href="http://larablog.ga/post/the-deconstructed-pancake"
+              class="blog-item"
+            >
+              <h2>THE DECONSTRUCTED PANCAKE</h2>
               <img
                 class="shadow"
-                src="../images/portfolio/logo-a.jpg"
+                src="../images/blogs/1671759737458135.webp"
                 alt="Project Image"
               />
               <div class="info">
-                <div class="author">By Ben Bryden on November 27, 2016</div>
-                <div class="tag">Design, Photography</div>
+                <div class="author">By MD Riaz on July 09, 2020</div>
+                <div class="tag">CSS, Layouts</div>
               </div>
             </a>
           </div>
@@ -129,11 +138,11 @@
             <a href="#" class="previous"></a>
 
             <div class="pagination-links">
-              <a href="../pages/blog.html" class="active">1</a
-              ><a href="../pages/blog.html" class="">2</a
-              ><a href="../pages/blog.html" class="">3</a
-              ><a href="../pages/blog.html" class="">4</a
-              ><a href="../pages/blog.html" class="">5</a>
+              <a href="#" class="active">1</a>
+              <a href="#" class="">2</a>
+              <a href="#" class="">3</a>
+              <a href="#" class="">4</a>
+              <a href="#" class="">5</a>
             </div>
 
             <a href="#" class="next"> </a>
