--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<meta name="google-site-verification" content="qg9hoPAcyfXqyW2YW1LevS1yCXjx65_t4TPjTGdf3OU" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riaz - Works</title>
